# ozdin

./: .env.example  .gitignore  LICENSE  Makefile  README.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/tests/: test_guardrails.py  test_normalize_and_language.py  test_rrf.py
apps/api/yasar_nuri_api/: __init__.py  main.py
apps/api/yasar_nuri_api/api/: deps.py  middleware.py  schemas.py
apps/api/yasar_nuri_api/api/routes/: health.py
apps/api/yasar_nuri_api/api/routes/v1/: __init__.py  admin.py  chat.py  client_config.py  feedback.py  query.py  sources.py
apps/api/yasar_nuri_api/application/: answer_service.py  chat_orchestrator.py  guardrails.py  query_rewrite_service.py  retrieval_service.py
apps/api/yasar_nuri_api/config/: __init__.py  settings.py
apps/api/yasar_nuri_api/domain/: language.py  rrf.py  text_normalize.py
apps/api/yasar_nuri_api/infrastructure/: prompt_loader.py  rate_limit.py  redis_cache.py
apps/api/yasar_nuri_api/infrastructure/db/: __init__.py  models.py  session.py
apps/api/yasar_nuri_api/infrastructure/providers/: __init__.py  base.py  gemini.py  speech_stub.py
apps/api/yasar_nuri_api/infrastructure/repositories/: __init__.py  chunk_repository.py
apps/mobile_web_flutter/: README.md  pubspec.yaml
apps/mobile_web_flutter/lib/: app.dart  main.dart
docs/: architecture.md  size.md
docs/sample_data/: sample_qa.jsonl  sample_quran.jsonl
infra/docker/: Dockerfile.api  docker-compose.yml
scripts/: smoke_api.py
(+12 files in other folders)
